--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <!-- favicon -->
     <link
       rel="icon"
-      href="%PUBLIC_URL%/assets/img/favicon.png"
+      href="%PUBLIC_URL%/assets/img/logo.svg"
       sizes="20x20"
       type="image/png"
     />
