build issues resolved

--- a/public/index.html
+++ b/public/index.html
@@ -7,20 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Migobucks</title>
     <!-- favicon -->
+
     <link
       rel="icon"
       href="%PUBLIC_URL%/assets/img/logo.svg"
       sizes="20x20"
       type="image/png"
     />
-    <link
-      href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css"
-      rel="stylesheet"
-    />
-    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-    <link rel="stylesheet" href="./src/dismissible.css" />
-    <script src="./src/dismissible.js"></script>
-    <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet" />
 
     <!-- bootstrap -->
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css" />
@@ -29,19 +22,24 @@
     <!-- animate -->
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/animate.css" />
     <!-- owl carousel -->
+
     <link
       rel="stylesheet"
       href="%PUBLIC_URL%/assets/css/owl.carousel.min.css"
     />
+
     <!-- icons -->
+
     <link
       rel="stylesheet"
       href="%PUBLIC_URL%/assets/css/font-awesome.min.css"
     />
+
     <link
       rel="stylesheet"
       href="%PUBLIC_URL%/assets/css/line-awesome.min.css"
     />
+
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/themify-icons.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/nice-select.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/flaticon.css" />
@@ -57,14 +55,14 @@
   </head>
   <body>
     <!-- preloader area start -->
-    <!-- <div class="preloader" id="preloader">
+    <div class="preloader" id="preloader">
       <div class="preloader-inner">
         <div class="spinner">
           <div class="dot1"></div>
           <div class="dot2"></div>
         </div>
       </div>
-    </div> -->
+    </div>
     <!-- preloader area end -->
     <div id="root"></div>
 
